Update .gitignore to include sql_alchemy.ipynb for SQL Alchemy testing

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # User-Defined Import SQL
 imports.sql
 
+# Test with SQL Alchemy
+sql_alchemy.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
